--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,5 +3,5 @@ flask-cors==6.0.1
 python-dotenv==1.1.0
 supabase==2.3.5
 google-generativeai==0.8.5
-pytest
-pytest-mock 
+pytest==8.3.4
+pytest-mock==3.13.0
