--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,10 +3,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt gunicorn
 
 COPY . .
 
 EXPOSE 5000
 
-CMD ["python", "app.py"] 
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"] 
