--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.1.1
 flask-cors==6.0.1
 python-dotenv==1.1.0
-supabase-py==0.0.2
+supabase==1.0.3
 google-generativeai==0.8.5
 pytest==8.3.4
 pytest-mock==3.13.0
